crates/formatter/tests/snapshots/snapshots__synapse__main__delta__77__05thread_notifications_backfill.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2023 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Force the background updates from 06thread_notifications.sql to run in the
-- foreground as code will now require those to be "done".

delete from background_updates
where update_name = 'event_push_backfill_thread_id';

-- Overwrite any null thread_id values.
update event_push_actions_staging
set thread_id = 'main'
where thread_id is null;
update event_push_actions set thread_id = 'main' where thread_id is null;

-- Empirically we can end up with entries in the push summary table with both a
-- `NULL` and `main` thread ID, which causes the insert below to fail. We fudge
-- this by deleting any `NULL` rows that have a corresponding `main`.
delete from event_push_summary as a
where
	thread_id is null
	and exists (
		select 1
		from event_push_summary as b
		where
			b.thread_id = 'main' and a.user_id = b.user_id and a.room_id = b.room_id
	);
-- Copy the NULL threads to have a 'main' thread ID.
--
-- Note: Some people seem to have duplicate rows with a `NULL` thread ID, in
-- which case we just fudge it with using MAX of the values. The counts *may* be
-- wrong for such rooms, but a) its an edge case, and b) they'll be fixed when
-- the user reads the room.
insert into event_push_summary (
	user_id,
	room_id,
	notif_count,
	stream_ordering,
	unread_count,
	last_receipt_stream_ordering,
	thread_id
)
select
	user_id,
	room_id,
	max(notif_count),
	max(stream_ordering),
	max(unread_count),
	max(last_receipt_stream_ordering),
	'main'
from event_push_summary
where thread_id is null
group by user_id, room_id, thread_id;

delete from event_push_summary as a where thread_id is null;

-- Drop the background updates to calculate the indexes used to find null thread_ids.
delete from background_updates
where update_name = 'event_push_actions_thread_id_null';
delete from background_updates
where update_name = 'event_push_summary_thread_id_null';
