crates/formatter/tests/snapshots/snapshots__synapse__main__delta__77__06thread_notifications_not_null.sqlite.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- The thread_id columns can now be made non-nullable.
--
-- SQLite doesn't support modifying columns to an existing table, so it must
-- be recreated.

-- Create the new tables.
create table event_push_actions_staging_new (
	event_id text not null,
	user_id text not null,
	actions text not null,
	notif smallint not null,
	highlight smallint not null,
	unread smallint,
	thread_id text,
	inserted_ts bigint,
	constraint event_push_actions_staging_thread_id check (thread_id is not null)
);

create table event_push_actions_new (
	room_id text not null,
	event_id text not null,
	user_id text not null,
	profile_tag varchar(32),
	actions text not null,
	topological_ordering bigint,
	stream_ordering bigint,
	notif smallint,
	highlight smallint,
	unread smallint,
	thread_id text,
	constraint event_id_user_id_profile_tag_uniqueness
		unique (room_id, event_id, user_id, profile_tag),
	constraint event_push_actions_thread_id check (thread_id is not null)
);

create table event_push_summary_new (
	user_id text not null,
	room_id text not null,
	notif_count bigint not null,
	stream_ordering bigint not null,
	unread_count bigint,
	last_receipt_stream_ordering bigint,
	thread_id text,
	constraint event_push_summary_thread_id check (thread_id is not null)
);

-- Copy the data.
insert into event_push_actions_staging_new (
	event_id,
	user_id,
	actions,
	notif,
	highlight,
	unread,
	thread_id,
	inserted_ts
)
select
	event_id, user_id, actions, notif, highlight, unread, thread_id, inserted_ts
from event_push_actions_staging;

insert into event_push_actions_new (
	room_id,
	event_id,
	user_id,
	profile_tag,
	actions,
	topological_ordering,
	stream_ordering,
	notif,
	highlight,
	unread,
	thread_id
)
select
	room_id,
	event_id,
	user_id,
	profile_tag,
	actions,
	topological_ordering,
	stream_ordering,
	notif,
	highlight,
	unread,
	thread_id
from event_push_actions;

insert into event_push_summary_new (
	user_id,
	room_id,
	notif_count,
	stream_ordering,
	unread_count,
	last_receipt_stream_ordering,
	thread_id
)
select
	user_id,
	room_id,
	notif_count,
	stream_ordering,
	unread_count,
	last_receipt_stream_ordering,
	thread_id
from event_push_summary;

-- Drop the old tables.
drop table event_push_actions_staging;
drop table event_push_actions;
drop table event_push_summary;

-- Rename the tables.
alter table event_push_actions_staging_new rename to event_push_actions_staging;
alter table event_push_actions_new rename to event_push_actions;
alter table event_push_summary_new rename to event_push_summary;

-- Recreate the indexes.
create index event_push_actions_staging_id
	on event_push_actions_staging (event_id);

create index event_push_actions_highlights_index
	on event_push_actions (
		user_id,
		room_id,
		topological_ordering,
		stream_ordering
	);
create index event_push_actions_rm_tokens
	on event_push_actions (
		user_id,
		room_id,
		topological_ordering,
		stream_ordering
	);
create index event_push_actions_room_id_user_id
	on event_push_actions (room_id, user_id);
create index event_push_actions_stream_ordering
	on event_push_actions (stream_ordering, user_id);
create index event_push_actions_u_highlight
	on event_push_actions (user_id, stream_ordering);

create unique index event_push_summary_unique_index2
	on event_push_summary (user_id, room_id, thread_id);

-- Recreate some indexes in the background, by re-running the background updates
-- from 72/02event_push_actions_index.sql and 72/06thread_notifications.sql.
insert into background_updates (ordering, update_name, progress_json)
values (7706, 'event_push_summary_unique_index2', '{}')
on conflict (update_name) do update
set progress_json = '{}';
insert into background_updates (ordering, update_name, progress_json)
values (7706, 'event_push_actions_stream_highlight_index', '{}')
on conflict (update_name) do update
set progress_json = '{}';
