crates/formatter/tests/snapshots/snapshots__synapse__main__delta__77__06thread_notifications_not_null_event_push_actions_staging.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- The thread_id columns can now be made non-nullable, this is done by using a
-- constraint (and not altering the column) to avoid taking out a full table lock.
--
-- We initially add an invalid constraint which guards against new data (this
-- doesn't lock the table).
alter table event_push_actions_staging
	add constraint event_push_actions_staging_thread_id
		check (thread_id is not null) not valid;

-- We then validate the constraint which doesn't need to worry about new data. It
-- only needs a SHARE UPDATE EXCLUSIVE lock but can still take a while to complete.
insert into background_updates (ordering, update_name, progress_json)
values (7706, 'event_push_actions_staging_thread_id', '{}');
